ANTLR/RoutesParser.js
// Generated from Routes.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import RoutesListener from './RoutesListener.js';
import RoutesVisitor from './RoutesVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class RoutesParser extends antlr4.Parser {

    static grammarFileName = "Routes.g4";
    static literalNames = [ null, "'route'", "'{'", "'}'", "':'", "','" ];
    static symbolicNames = [ null, null, null, null, null, null, "ROLE", 
                             "ACTION", "SUBURL", "WS" ];
    static ruleNames = [ "program", "routeDef", "suburlDef", "actionList" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = RoutesParser.ruleNames;
        this.literalNames = RoutesParser.literalNames;
        this.symbolicNames = RoutesParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, RoutesParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 9; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 8;
	            this.routeDef();
	            this.state = 11; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===1);
	        this.state = 13;
	        this.match(RoutesParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	routeDef() {
	    let localctx = new RouteDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, RoutesParser.RULE_routeDef);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 15;
	        this.match(RoutesParser.T__0);
	        this.state = 16;
	        this.match(RoutesParser.ROLE);
	        this.state = 17;
	        this.match(RoutesParser.T__1);
	        this.state = 19; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 18;
	            this.suburlDef();
	            this.state = 21; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===8);
	        this.state = 23;
	        this.match(RoutesParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	suburlDef() {
	    let localctx = new SuburlDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, RoutesParser.RULE_suburlDef);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 25;
	        this.match(RoutesParser.SUBURL);
	        this.state = 26;
	        this.match(RoutesParser.T__3);
	        this.state = 27;
	        this.actionList();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	actionList() {
	    let localctx = new ActionListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, RoutesParser.RULE_actionList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29;
	        this.match(RoutesParser.ACTION);
	        this.state = 34;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===5) {
	            this.state = 30;
	            this.match(RoutesParser.T__4);
	            this.state = 31;
	            this.match(RoutesParser.ACTION);
	            this.state = 36;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

RoutesParser.EOF = antlr4.Token.EOF;
RoutesParser.T__0 = 1;
RoutesParser.T__1 = 2;
RoutesParser.T__2 = 3;
RoutesParser.T__3 = 4;
RoutesParser.T__4 = 5;
RoutesParser.ROLE = 6;
RoutesParser.ACTION = 7;
RoutesParser.SUBURL = 8;
RoutesParser.WS = 9;

RoutesParser.RULE_program = 0;
RoutesParser.RULE_routeDef = 1;
RoutesParser.RULE_suburlDef = 2;
RoutesParser.RULE_actionList = 3;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = RoutesParser.RULE_program;
    }

	EOF() {
	    return this.getToken(RoutesParser.EOF, 0);
	};

	routeDef = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(RouteDefContext);
	    } else {
	        return this.getTypedRuleContext(RouteDefContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.exitProgram(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof RoutesVisitor ) {
	        return visitor.visitProgram(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class RouteDefContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = RoutesParser.RULE_routeDef;
    }

	ROLE() {
	    return this.getToken(RoutesParser.ROLE, 0);
	};

	suburlDef = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(SuburlDefContext);
	    } else {
	        return this.getTypedRuleContext(SuburlDefContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.enterRouteDef(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.exitRouteDef(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof RoutesVisitor ) {
	        return visitor.visitRouteDef(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SuburlDefContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = RoutesParser.RULE_suburlDef;
    }

	SUBURL() {
	    return this.getToken(RoutesParser.SUBURL, 0);
	};

	actionList() {
	    return this.getTypedRuleContext(ActionListContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.enterSuburlDef(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.exitSuburlDef(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof RoutesVisitor ) {
	        return visitor.visitSuburlDef(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ActionListContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = RoutesParser.RULE_actionList;
    }

	ACTION = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(RoutesParser.ACTION);
	    } else {
	        return this.getToken(RoutesParser.ACTION, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.enterActionList(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof RoutesListener ) {
	        listener.exitActionList(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof RoutesVisitor ) {
	        return visitor.visitActionList(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




RoutesParser.ProgramContext = ProgramContext; 
RoutesParser.RouteDefContext = RouteDefContext; 
RoutesParser.SuburlDefContext = SuburlDefContext; 
RoutesParser.ActionListContext = ActionListContext; 
